changed the columns css to the correct code using align-self and width

--- a/css/columns.css
+++ b/css/columns.css
@@ -3,18 +3,20 @@ ul {
     width: 75vw;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     
 
     /* add solution here */
-
+    
 }
 
 li {
     padding: 10px;
     margin: 10px;
     background-color: rgb(245, 173, 41);
-    border: solid;
+
 
     /* add solution here.. */
+  align-self: stretch;
+  width: 12vw;
 }
